# Toumou

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  ROADMAP.md
docs/: TUTORIAL.md
docs/doxygen/: Doxyfile
docs/sphinx/: requirements.txt
docs/sphinx/source/: api.rst  conf.py  index.rst
include/lava/: all.hpp  camera.hpp  color.hpp  constants.hpp  field.hpp  geometry.hpp  image.hpp  io.hpp  light.hpp  material.hpp  rendering.hpp  root_estimation.hpp  root_finding.hpp  scene.hpp  surface.hpp
include/toumou/: all.hpp  camera.hpp  color.hpp  constants.hpp  denoising.hpp  field.hpp  geometry.hpp  image.hpp  io.hpp  light.hpp  macros.hpp  material.hpp  rendering.hpp  root_estimation.hpp  scene.hpp  surface.hpp
scripts/: batch_render.py  shooting.py  sphere.py
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  main_example.cpp
src/bindings/: CMakeLists.txt  lava_python.cpp  toumou_python.cpp
src/lava/: CMakeLists.txt  camera.cpp  color.cpp  field.cpp  geometry.cpp  image.cpp  io.cpp  light.cpp  material.cpp  rendering.cpp  root_estimation.cpp  root_finding.cpp  scene.cpp  surface.cpp
src/toumou/: CMakeLists.txt  camera.cpp  color.cpp  denoising.cpp  field.cpp  geometry.cpp  image.cpp  io.cpp  light.cpp  material.cpp  rendering.cpp  root_estimation.cpp  scene.cpp  surface.cpp
